--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Le Fameux jeu de la vie</title>
+        <title>Pixel Game Life - Conway's Game of Life</title>
         <meta
             name="description"
-            content="Démo du jeu de la vie de Conway, simmple et efficace. Essayez de créer des formes et de les voir évoluer. Génial pour comprendre les systèmes complexes."
+            content="Conway's Game of Life demo, simple and effective. Try to create shapes and see them evolve. Great for understanding complex systems."
         />
     </head>
     <body>
