--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             name="description"
             content="Conway's Game of Life demo, simple and effective. Try to create shapes and see them evolve. Great for understanding complex systems."
         />
+
+        <!-- Robots -->
+
+        <meta name="robots" content="index, follow" />
     </head>
     <body>
         <div id="root"></div>
